--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Shop</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -16,8 +18,8 @@
 <body>
     <div class="main">
         <header class="header">
-            <div class="grid">
-                <nav class="navbar">
+            <div class="grid wide">
+                <nav class="navbar hide-on-mobile-tablet">
                     <ul class="navbar__list">
                         <li class="navbar__item navbar__item--has-qr navbar__item--separate">
                             Vào cửa hàng trên ứng dụng Shop
@@ -134,7 +136,12 @@
 
                 <!-- Header with search -->
                 <div class="header-with-search">
-                    <div class="header__logo">
+                    <label for="mobile-search-checkbox" class="header__mobile-search">
+                        <i class="fas fa-search header__mobile-search-icon"></i>
+                    </label>
+                    
+                    <!-- Header logo -->
+                    <div class="header__logo hide-on-tablet">
                         <a href="" class="header__logo-link">
                             <svg viewBox="0 0 192 65" class="header__logo-img">
                             <g fill-rule="evenodd">
@@ -143,6 +150,9 @@
                         </svg>
                         </a>       
                     </div>
+                    <!-- Header search -->
+                    <input id="mobile-search-checkbox" type="checkbox" name="" class="header__search-checkbox" hidden>
+
                     <div class="header__search">
                         <div class="header__search-input-wrap">
                             <input type="text" placeholder="Nhập để tìm kiếm sản phẩm" class="header__search-input">
@@ -253,12 +263,26 @@
                     </div>
                 </div>
             </div>
+            <ul class="header__sort-bar">
+                <li class="header__sort-item">
+                    <a href="" class="header__sort-link">Liên quan</a>
+                </li>
+                <li class="header__sort-item header__sort-item--active">
+                    <a href="" class="header__sort-link">Mới nhất</a>
+                </li>
+                <li class="header__sort-item">
+                    <a href="" class="header__sort-link">Bán chạy</a>
+                </li>
+                <li class="header__sort-item">
+                    <a href="" class="header__sort-link">Giá</a>
+                </li>
+            </ul>
         </header>
 
         <div class="app__container">
-            <div class="grid">
-                <div class="grid__row app__content">
-                    <div class="grid__column-2">
+            <div class="grid wide">
+                <div class="row sm-gutter app__content">
+                    <div class="col l-2 m-0 c-0">
                         <nav class="category">
                             <h3 class="category__heading">
                                 <i class="category__heading-icon fas fa-list"></i>
@@ -277,9 +301,9 @@
                             </ul>
                         </nav>
                     </div>
-                    <div class="grid__column-10">
+                    <div class="col l-10 m-12 c-12">
                         <!-- Home filter -->
-                        <div class="home-filter">
+                        <div class="home-filter hide-on-mobile-tablet">
                             <span class="home-filter__label">Sắp xếp theo</span>
                             <button class="home-filter__btn btn">Phố biến</button>
                             <button class="home-filter__btn btn btn--primary">Mới nhất</button>
@@ -312,10 +336,40 @@
                             </div>
                         </div>
 
+                        <nav class="mobile-category">
+                            <ul class="mobile-category__list">
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Dụng cụ & Thiết bị điện tử</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Dụng cụ & Thiết bị điện tử</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Dụng cụ & Thiết bị điện tử</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Dụng cụ & Thiết bị điện tử</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Dụng cụ & Thiết bị điện tử</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Dụng cụ & Thiết bị điện tử</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Dụng cụ & Thiết bị điện tử</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Dụng cụ & Thiết bị điện tử</a>
+                                </li>
+
+                            </ul>
+                        </nav>
+                        <!-- Home product -->
                         <div class="home-product">
-                            <div class="grid">
-                                <div class="grid__row">
-                                    <div class="grid__column-2-4">
+                            <div class="grid wide">
+                                <div class="row sm-gutter">
+                                    <div class="col l-2-4 m-4 c-6">
                                         <!-- Product item -->
                                         <a class="home-product-item" href="">
                                             <div class="home-product-item__img" style="background-image: url(https://cf.shopee.vn/file/338cb9516034fd895d46e1afe6d4f5db_tn);"></div>
@@ -354,7 +408,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="grid__column-2-4">
+                                    <div class="col l-2-4 m-4 c-6">
                                         <!-- Product item -->
                                         <a class="home-product-item" href="">
                                             <div class="home-product-item__img" style="background-image: url(https://cf.shopee.vn/file/4f197c4c3e0038d2aa9b4be80738b8d8_tn);"></div>
@@ -393,7 +447,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="grid__column-2-4">
+                                    <div class="col l-2-4 m-4 c-6">
                                         <!-- Product item -->
                                         <a class="home-product-item" href="">
                                             <div class="home-product-item__img" style="background-image: url(https://cf.shopee.vn/file/f5b2bce24e15f4a82d8bb48e2cc97560);"></div>
@@ -432,7 +486,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="grid__column-2-4">
+                                    <div class="col l-2-4 m-4 c-6">
                                         <!-- Product item -->
                                         <a class="home-product-item" href="">
                                             <div class="home-product-item__img" style="background-image: url(https://cf.shopee.vn/file/93aaec6f65969d992a165532b4b31f85);"></div>
@@ -471,7 +525,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="grid__column-2-4">
+                                    <div class="col l-2-4 m-4 c-6">
                                         <!-- Product item -->
                                         <a class="home-product-item" href="">
                                             <div class="home-product-item__img" style="background-image: url(https://cf.shopee.vn/file/ee3711a7c5ad6cbba195fa00ec39fe0b);"></div>
@@ -510,7 +564,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="grid__column-2-4">
+                                    <div class="col l-2-4 m-4 c-6">
                                         <!-- Product item -->
                                         <a class="home-product-item" href="">
                                             <div class="home-product-item__img" style="background-image: url(https://cf.shopee.vn/file/b293aafcb465223fe4483601862eb101);"></div>
@@ -549,7 +603,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="grid__column-2-4">
+                                    <div class="col l-2-4 m-4 c-6">
                                         <!-- Product item -->
                                         <a class="home-product-item" href="">
                                             <div class="home-product-item__img" style="background-image: url(https://cf.shopee.vn/file/874ec20325154aa794dd0670a7bf24b6);"></div>
@@ -588,7 +642,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="grid__column-2-4">
+                                    <div class="col l-2-4 m-4 c-6">
                                         <!-- Product item -->
                                         <a class="home-product-item" href="">
                                             <div class="home-product-item__img" style="background-image: url(https://cf.shopee.vn/file/2bc183e937f245a14eb3a7f854dd192a);"></div>
@@ -627,7 +681,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="grid__column-2-4">
+                                    <div class="col l-2-4 m-4 c-6">
                                         <!-- Product item -->
                                         <a class="home-product-item" href="">
                                             <div class="home-product-item__img" style="background-image: url(https://cf.shopee.vn/file/2f0c928e1b9d797478b7fbe0abad91ee);"></div>
@@ -666,7 +720,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="grid__column-2-4">
+                                    <div class="col l-2-4 m-4 c-6">
                                         <!-- Product item -->
                                         <a class="home-product-item" href="">
                                             <div class="home-product-item__img" style="background-image: url(https://cf.shopee.vn/file/6da93ea0c449c8a6cd07ef485a9241bc);"></div>
@@ -710,6 +764,7 @@
                             </div>
                         </div>
 
+                         <!-- Pagination -->
                         <ul class="pagination">
                             <li class="pagination-item">
                                 <a href="" class="pagination-item__link">
@@ -763,9 +818,9 @@
         </div>
 
         <footer class="footer">
-            <div class="grid">
-                <div class="grid__row">
-                    <div class="grid__column-2-4">
+            <div class="grid wide footer__content">
+                <div class="row">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">CHĂM SÓC KHÁCH HÀNG</h3>
                         <ul class="footer__list">
                             <li class="footer-item">
@@ -780,7 +835,7 @@
 
                         </ul>
                     </div>
-                    <div class="grid__column-2-4">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">VỀ SHOPEE</h3>
                         <ul class="footer__list">
                             <li class="footer-item">
@@ -797,7 +852,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="grid__column-2-4">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">Danh mục sản phẩm</h3>
                         <ul class="footer__list">
                             <li class="footer-item">
@@ -811,8 +866,8 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="grid__column-2-4">
-                        <h3 class="footer__heading">THEO DÕI CHÚNG TÔI TRÊN</h3>
+                    <div class="col l-2-4 m-4 c-6">
+                        <h3 class="footer__heading">THEO DÕI CHÚNG TÔI</h3>
                         <ul class="footer__list">
                             <li class="footer-item">
                                 <a href="" class="footer-item__link">
@@ -834,7 +889,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="grid__column-2-4">
+                    <div class="col l-2-4 m-8 c-12">
                         <h3 class="footer__heading">TẢI ỨNG DỤNG SHOPEE NGAY THÔI</h3>
                         <div class="footer__download">
                             <img src="/assets/img/QR_code.png" class="footer__download-qr" alt="">
@@ -851,7 +906,7 @@
                 </div>
             </div>
             <div class="footer__bottom">
-                <div class="grid">
+                <div class="grid wide">
                     <p class="footer__text">© 2021 - Bản quyền thuộc về Công ty TNHH See</p>
                 </div>
             </div>
